[gd_scene load_steps=2 format=3 uid="uid://dk4y1id0qa78p"]

[ext_resource type="Script" path="res://scenes/dialogs/context_menu/context_menu.gd" id="1_takiv"]

[node name="ContextMenu" type="PanelContainer"]
offset_right = 127.0
offset_bottom = 97.0
theme_type_variation = &"ContextMenu"
script = ExtResource("1_takiv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CopyButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BTN_COPY"

[node name="PasteButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BTN_PASTE"

[node name="ClearButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BTN_CLEAR"
